<resources>
    <string name="app_name">Super Solid App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_contact">Super Solid App</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="feedbacktitle">Form Description</string>
    <string name="feedbackname">Your Name Here</string>
    <string name="feedbackemail">Your Email Here</string>
    <string name="feedbackbody">Your Message Here</string>
    <string name="feedbackresponse">Would you like an email response?</string>
    <string name="feedbacktype">Choices</string>
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbackbutton">Send Feedback</string>

    <string name="submitform">Send Feedback</string>
</resources>
